--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="16dp"
+    android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <EditText
+        android:id="@+id/et_url"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="http://google.com"/>
+
+    <Button
+        android:id="@+id/btn_buka_website"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Website Kota Palembang"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textColor="#3F51B5"
-        android:layout_marginBottom="32dp"/>
+        android:text="Buka Website"
+        android:layout_marginBottom="16dp"/>
+
+    <EditText
+        android:id="@+id/et_lokasi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Jembatan Ampera"/>
+
+    <Button
+        android:id="@+id/btn_buka_lokasi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Buka Lokasi"
+        android:layout_marginBottom="16dp"/>
+
+    <EditText
+        android:id="@+id/et_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Teks Apa Saja"/>
+
+    <Button
+        android:id="@+id/btn_bagikan_teks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bagikan Teks"/>
 
 </LinearLayout>
